# screencast

./: Cargo.toml  Dockerfile  LICENSE  README.md  build_linux.sh
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: cli.rs  main.rs
client/src/capture/: errors.rs  mod.rs  scap.rs  xcap.rs
client/src/capture/encoded_streams/: h264_stream.rs  mod.rs
client/src/codecs/: errors.rs  h264_decoder.rs  h264_encoder.rs  mod.rs
client/src/gui/: event_loop.rs  event_manager.rs  mod.rs  state.rs
client/src/network/: connection.rs  errors.rs  events.rs  h264_decoder.rs  mod.rs  reader.rs  state.rs
client/src/network/codecs/: h264_decoder.rs  h264_encoder.rs
client/src/transport/: errors.rs  events.rs  mod.rs
client/src/video/: errors.rs  mod.rs  xcap.rs
signal/: Cargo.toml
signal/src/: config.rs  main.rs  peers.rs  webrtc_model.rs
webrtc_model/: Cargo.toml
webrtc_model/src/: lib.rs
