[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = "0.32.3"
fs_extra = "1.3.0"
futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
image = "0.25.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
webrtc = "0.14.0"
xcap = "0.7.1"
